--- a/.github/workflow/flutter_ci.yml
+++ b/.github/workflow/flutter_ci.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           flutter-version: '3.7.7'
           channel: 'stable'
-      - run: flutter --version
+      - run: flutter --version && flutter upgrade
       # 12
       - name: Get dependencies
         run: flutter pub get
