--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cloud_firestore_platform_interface:
   go_router: ^11.0.0
   fluttertoast: ^8.2.2
+  card_swiper:
 
 dev_dependencies:
   flutter_test:
