--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core:
-  cloud_firestore:
+  cloud_firestore: ^4.9.2
   firebase_auth:
   google_sign_in:
   cupertino_icons:
