--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   lottie: ^2.6.0
   shimmer: ^3.0.0
   cached_network_image: ^3.3.0
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
